2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Expose the availability of place management to programs.

	* lib/include/svp/sep.h: Introduce the macro `SVP_HAS_SEP' is
	introduced which signals to program the availability of place
	management.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Integrate the place allocator in the library.

	* tools/lib/mtalpha-sim/slrt.s: Move the definition of the
	pointers to fibre and variable data, as well as their
	initializations, to C code in...
	
	* slc/lib/src/mtinit.c: here. Call the place allocator
	initialization as part of the library initialization.
	
	* slc/lib/Makefile.am: Mention the new files.

	* slc/lib/mtalpha.mk: Compile them into the library.

2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Import Joe's work on place allocation.

	An initial version of a SVP place allocator was developed by Joe
	Master using a first-fit algorithm; this was extended to provide
	multiple allocation policies.
	
	* lib/include/svp/sep.h,
	* lib/src/mtsep.c: New.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix symbolic place names in `seqc'.

	The `seqc' implementation was out-of-sync with the others in not
	defining `PLACE_LOCAL' and `PLACE_DEFAULT'.
	
	* tools/lib/t-seqc/include/sl_support.h: Rename `SVP_LOCAL' to
	`PLACE_LOCAL' and define `PLACE_DEFAULT'.

2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small optimization in MT-alpha code generation.
	
	* tools/bin/spp (pppalpha.makerepl): Prepend the dollar signs
	early.

2009-09-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bugs in MT-alpha code generation.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Fix `sl_setp' for
	floating-point shared parameters.

	* tools/bin/spp (pppalpha.findusedcallregs, pppalpha.rewritejsr):
	Be (more) careful about function calls where both int and fp
	registers are used for function calls.

	* tools/bin/spp (pppalpha.fixemptyf, pppalpha.filter2): Add new